--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@iconify/iconify": "^3.1.1",
     "@iconify/react": "^6.0.0",
     "@xyflow/react": "^12.6.3",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.0",
+    "react-toastify": "^11.0.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
