--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@xyflow/react": "^12.6.3",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "html-to-image": "^1.11.13",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
@@ -27,6 +29,8 @@
     "react-router-dom": "^6.30.0",
     "react-toastify": "^11.0.5",
     "reactflow": "^11.11.4",
+    "sweetalert2": "^11.22.2",
+    "sweetalert2-react-content": "^5.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
